--- a/Resources/StyleDictionary.xaml
+++ b/Resources/StyleDictionary.xaml
@@ -4,6 +4,10 @@
     <Style TargetType="Button">
         <Setter Property="Margin" Value="2" />
     </Style>
+    
+    <Style x:Key="button" TargetType="Button">
+        <Setter Property="Margin" Value="2" />
+    </Style>
 
     <Style TargetType="TextBox">
         <Setter Property="Margin" Value="2" />
