--- a/Windows/Controls/CommandListView.xaml
+++ b/Windows/Controls/CommandListView.xaml
@@ -5,22 +5,47 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
              mc:Ignorable="d" 
+             d:DataContext="{d:DesignInstance Type=local:CommandListViewDataContextVO}"
              d:DesignHeight="150" d:DesignWidth="800">
     <StackPanel>
-        <ListView Name="lstCommands" MinHeight="30">
+        <ListView Name="lstCommands" MinHeight="30" SelectionChanged="LstCommands_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name}" />
+                    <TextBlock Text="{Binding Name}" mouse />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
         <WrapPanel Orientation="Horizontal">
-            <Button Name="btnAdd" Width="20" Content="+" ToolTip="Add" Click="BtnAdd_Click" />
-            <Button Name="btnModify" Width="20" Content="*" ToolTip="Modify" Click="BtnModify_Click" />
-            <Button Name="btnDelete" Width="20" Content="-" ToolTip="Delete" Click="BtnDelete_Click" />
-            <Button Name="btnMoveUp" Width="20" Content="↑" ToolTip="Move Up" Click="BtnMoveUp_Click" />
-            <Button Name="btnMoveDown" Width="20" Content="↓" ToolTip="Move Down" Click="BtnMoveDown_Click" />
-            <Button Name="btnRun" Width="20" Content="▷" ToolTip="Run" Click="BtnRun_Click" />
+            <WrapPanel.Resources>
+                <ResourceDictionary>
+                    <Style x:Key="buttonSingleSelected" TargetType="Button" BasedOn="{StaticResource button}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsSingleSelected}" Value="False">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                    <Style x:Key="buttonAnySelected" TargetType="Button" BasedOn="{StaticResource button}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsAnySelected}" Value="False">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </ResourceDictionary>
+            </WrapPanel.Resources>
+            <Button Name="btnAdd" Width="20"
+                    Content="➕" ToolTip="Add" Click="BtnAdd_Click" />
+            <Button Name="btnDelete" Width="20" Style="{StaticResource buttonAnySelected}"
+                    Content="➖" ToolTip="Delete" Click="BtnDelete_Click" />
+            <Button Name="btnModify" Width="20" Style="{StaticResource buttonSingleSelected}" 
+                    Content="⚙" ToolTip="Modify" Click="BtnModify_Click" />
+            <Button Name="btnMoveUp" Width="20" Style="{StaticResource buttonAnySelected}"
+                    Content="↑" ToolTip="Move Up" Click="BtnMoveUp_Click" />
+            <Button Name="btnMoveDown" Width="20" Style="{StaticResource buttonAnySelected}"
+                    Content="↓" ToolTip="Move Down" Click="BtnMoveDown_Click" />
+            <Button Name="btnStart" Width="20" Style="{StaticResource buttonAnySelected}"
+                    Content="▷" ToolTip="Start" Click="BtnStart_Click" />
         </WrapPanel>
     </StackPanel>
 </UserControl>
