--- a/Windows/Controls/ExecutionListView.xaml
+++ b/Windows/Controls/ExecutionListView.xaml
@@ -4,23 +4,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance Type=local:ExecutionListViewDataContextVO}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        <ListView Name="lstExecutions" MinHeight="30">
+    <StackPanel Orientation="Vertical">
+        <ListView Name="lstExecutions" MinHeight="30" SelectionChanged="LstExecutions_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-
-                        <TextBlock Grid.Column="0" Text="{Binding Name}" />
-                        <Button Name="btnStop" Grid.Column="1" Width="20" Content="□" Tag="{Binding Name}" Click="BtnStop_Click" />
-                    </Grid>
+                    <TextBlock Text="{Binding Name}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <WrapPanel Orientation="Horizontal">
+            <Button Name="btnStop" Width="20" Content="□" ToolTip="Stop" IsEnabled="{Binding IsAnySelected}" Click="BtnStop_Click" />
+        </WrapPanel>
     </StackPanel>
 </UserControl>
