Enhance list view operation

--- a/Windows/Controls/FieldListView.xaml
+++ b/Windows/Controls/FieldListView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=local:FieldListItemVO}"
+             d:DataContext="{d:DesignInstance Type=local:FieldListViewDataContextVO}"
              d:DesignHeight="150" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -27,18 +27,25 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Name="btnAdd" Grid.Column="0" Width="20" Content="➕" ToolTip="Add" Click="BtnAdd_Click" />
-            <Button Name="btnDelete" Grid.Column="1" Width="20" Content="➖" ToolTip="Delete" Click="BtnDelete_Click" />
-            <Button Name="btnModify" Grid.Column="2" Width="20" Content="⚙" ToolTip="Modify" Click="BtnModify_Click" />
-            <Button Name="btnCopy" Grid.Column="3" Width="20" Content="📄" ToolTip="Copy" Click="BtnCopy_Click" />
-            <Button Name="btnPaste" Grid.Column="4" Width="20" Content="📋" ToolTip="Paste" Click="BtnPaste_Click" />
-            <Button Name="btnMoveLeft" Grid.Column="5" Width="20" Content="←" ToolTip="Move Left" Click="BtnMoveLeft_Click" />
-            <Button Name="btnMoveRight" Grid.Column="6" Width="20" Content="→" ToolTip="Move Right" Click="BtnMoveRight_Click" />
+            <Button Name="btnAdd" Grid.Column="0" Width="20" Content="➕" ToolTip="Add"
+                    Click="BtnAdd_Click" />
+            <Button Name="btnDelete" Grid.Column="1" Width="20" Content="➖" ToolTip="Delete"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnDelete_Click" />
+            <Button Name="btnModify" Grid.Column="2" Width="20" Content="⚙" ToolTip="Modify"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnModify_Click" />
+            <Button Name="btnCopy" Grid.Column="3" Width="20" Content="📄" ToolTip="Copy"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnCopy_Click" />
+            <Button Name="btnPaste" Grid.Column="4" Width="20" Content="📋" ToolTip="Paste"
+                    IsEnabled="{Binding IsAnyFieldInClipboard}" Click="BtnPaste_Click" />
+            <Button Name="btnMoveLeft" Grid.Column="5" Width="20" Content="←" ToolTip="Move Left"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnMoveLeft_Click" />
+            <Button Name="btnMoveRight" Grid.Column="6" Width="20" Content="→" ToolTip="Move Right"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnMoveRight_Click" />
         </Grid>
 
         <ListView Name="lstFields" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" MinHeight="25"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                  SelectionMode="Single">
+                  SelectionChanged="LstFields_SelectionChanged" MouseDoubleClick="LstFields_MouseDoubleClick">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel></WrapPanel>
