--- a/Windows/Controls/FilterListView.xaml
+++ b/Windows/Controls/FilterListView.xaml
@@ -129,7 +129,7 @@
         </StackPanel>
         
         <ListView Name="lstFilters" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="3" MinHeight="20"
-                  SelectionMode="Single">
+                  SelectionChanged="LstFilters_SelectionChanged" MouseDoubleClick="LstFilters_MouseDoubleClick">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel></WrapPanel>
@@ -180,13 +180,20 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Name="btnAdd" Grid.Column="0" Width="20" Content="➕" ToolTip="Add" Click="BtnAdd_Click" />
-            <Button Name="btnDelete" Grid.Column="1" Width="20" Content="➖" ToolTip="Delete" Click="BtnDelete_Click" />
-            <Button Name="btnModify" Grid.Column="2" Width="20" Content="⚙" ToolTip="Modify" Click="BtnModify_Click" />
-            <Button Name="btnCopy" Grid.Column="3" Width="20" Content="📄" ToolTip="Copy" Click="BtnCopy_Click" />
-            <Button Name="btnPaste" Grid.Column="4" Width="20" Content="📋" ToolTip="Paste" Click="BtnPaste_Click" />
-            <Button Name="btnMoveLeft" Grid.Column="5" Width="20" Content="←" ToolTip="Move Left" Click="BtnMoveLeft_Click" />
-            <Button Name="btnMoveRight" Grid.Column="6" Width="20" Content="→" ToolTip="Move Right" Click="BtnMoveRight_Click" />
+            <Button Name="btnAdd" Grid.Column="0" Width="20" Content="➕" ToolTip="Add"
+                    Click="BtnAdd_Click" />
+            <Button Name="btnDelete" Grid.Column="1" Width="20" Content="➖" ToolTip="Delete"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnDelete_Click" />
+            <Button Name="btnModify" Grid.Column="2" Width="20" Content="⚙" ToolTip="Modify"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnModify_Click" />
+            <Button Name="btnCopy" Grid.Column="3" Width="20" Content="📄" ToolTip="Copy"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnCopy_Click" />
+            <Button Name="btnPaste" Grid.Column="4" Width="20" Content="📋" ToolTip="Paste"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnPaste_Click" />
+            <Button Name="btnMoveLeft" Grid.Column="5" Width="20" Content="←" ToolTip="Move Left"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnMoveLeft_Click" />
+            <Button Name="btnMoveRight" Grid.Column="6" Width="20" Content="→" ToolTip="Move Right"
+                    IsEnabled="{Binding IsAnySelected}" Click="BtnMoveRight_Click" />
         </Grid>
     </Grid>
 </UserControl>
